--- a/css/screen.css
+++ b/css/screen.css
@@ -83,7 +83,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* line 21, ../sass/screen.scss */
 .mainSection {
   width: 100%;
-  height: 400px;
+  height: 600px;
   background: red;
   position: relative;
 }
@@ -92,88 +92,77 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 .leftColumn {
   width: 1000px;
   background: blue;
-  height: auto;
+  height: 600px;
   padding-bottom: 100px;
+  overflow-y: scroll;
+  box-sizing: border-box;
 }
 
-/* line 33, ../sass/screen.scss */
+/* line 35, ../sass/screen.scss */
 .rightColumn {
   width: 300px;
   background: green;
-  height: 400px;
+  height: 600px;
   position: absolute;
   top: 0px;
   right: 0px;
 }
 
-/* line 42, ../sass/screen.scss */
+/* line 43, ../sass/screen.scss */
+.rows {
+  margin: 10px auto;
+}
+
+/* line 46, ../sass/screen.scss */
 .rows > div {
   width: 20%;
   height: auto;
   display: inline-block;
 }
 
-/* line 47, ../sass/screen.scss */
-.rows:nth-child(1):before {
-  content: "1";
+/* line 51, ../sass/screen.scss */
+input {
+  text-align: center;
+  border-radius: 7px;
+  border: 0px;
+  padding: 3px 0;
 }
 
-/* line 50, ../sass/screen.scss */
-.rows:nth-child(2):before {
-  content: "2";
-}
-
-/* line 53, ../sass/screen.scss */
-.rows:nth-child(3):before {
-  content: "3";
-}
-
-/* line 56, ../sass/screen.scss */
-.rows:nth-child(4):before {
-  content: "4";
-}
-
-/* line 59, ../sass/screen.scss */
-.rows:nth-child(5):before {
-  content: "5";
-}
-
-/* line 62, ../sass/screen.scss */
-.rows:nth-child(6):before {
-  content: "6";
-}
-
-/* line 65, ../sass/screen.scss */
-.rows:nth-child(7):before {
-  content: "7";
-}
-
-/* line 68, ../sass/screen.scss */
-.rows:nth-child(8):before {
-  content: "8";
-}
-
-/* line 71, ../sass/screen.scss */
-.rows:nth-child(9):before {
-  content: "9";
-}
-
-/* line 74, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 label.invisible {
   display: none;
 }
 
-/* line 77, ../sass/screen.scss */
+/* line 87, ../sass/screen.scss */
 div.invisible {
   display: none;
 }
 
-/* line 80, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 .rows .selectType {
   display: block;
   width: 100%;
 }
-/* line 83, ../sass/screen.scss */
+/* line 93, ../sass/screen.scss */
 .rows .selectType legend {
   margin: 0 auto;
+}
+
+/* line 97, ../sass/screen.scss */
+.resultSection {
+  width: 100%;
+  height: 500px;
+  background: lightblue;
+}
+
+/* line 102, ../sass/screen.scss */
+.result_table td {
+  border: 1px solid black;
+  text-align: center;
+  width: 5%;
+}
+
+/* line 107, ../sass/screen.scss */
+.result_table {
+  width: 100%;
 }
