--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -139,3 +139,9 @@ button:hover{
 // 	width: 100%;
 // 	height: 500px;
 // }
+.display_circiut_container{
+	width: 100%;
+	height: 700px;
+	overflow: scroll;
+	border: 2px solid black;
+}
