--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,8 +5,13 @@
 
 @import "compass/reset";
 
+@font-face {
+    font-family: Helvetica-bold;
+    src: url("../fonts/Helvetica/HelveticaNeueCyr-Bold.otf");
+}
+
 .pageLayer{
-	width: 1300px;
+	width: 100%;
 	height: 600px;
 	margin: 0 auto;
 	background: transparent;
@@ -14,28 +19,54 @@
 	top: 0px;
 	text-align: center;
 	color: black;
-	font-family: Arial, sans-serif;
+	font-family: Arial, Helvetica-bold, sans-serif;
 	//font-size: 1.6em;
 }
 
 .mainSection{
 	width: 100%;
-	height: 600px;
+	height: 500px;
 	background: transparent;
 	position: relative;
 }
 .leftColumn{
-	width: 1000px;
-	background: blue;
-	height: 600px;
+	width: 75%;
+	background: rgba(244, 223, 58, 0.8);
+	height: 500px;
 	padding-bottom: 100px;
 	overflow-y: scroll;
 	box-sizing: border-box;
+	padding: 50px 5px 0;
+	strong{
+		font-size: 1.5em;
+		margin-bottom: 20px;
+		display: inline-block;
+	}
+}
+.leftColumn::-webkit-scrollbar{
+	 width:12px;
+}
+.leftColumn::-webkit-scrollbar-thumb{
+    border-width:1px 1px 1px 2px;
+    border-color: #777;
+    background-color: #aaa;
+}
+.leftColumn::-webkit-scrollbar-thumb:hover{
+    border-width: 1px 1px 1px 2px;
+    border-color: #555;
+    background-color: #777;
+}
+.leftColumn::-webkit-scrollbar-track{
+    border-width:0;
+}
+.leftColumn::-webkit-scrollbar-track:hover{
+    border-left: solid 1px #aaa;
+    background-color: #eee;
 }
 .rightColumn{
-	width: 300px;
-	background: green;
-	height: 600px;
+	width: 25%;
+	background: rgba(19, 159, 240, 0.8);
+	height: 500px;
 	position: absolute;
 	top: 0px;
 	right: 0px;
@@ -50,37 +81,16 @@
 }
 input{
 	text-align: center;
-	border-radius: 7px;
-	border: 0px;
+	border-radius: 5px;
+	border: 1px solid transparent;
 	padding: 3px 0;
 }
-// .rows:nth-child(1):before{
-// 	content: "1";
-// }
-// .rows:nth-child(2):before{
-// 	content: "2";
-// }
-// .rows:nth-child(3):before{
-// 	content: "3";
-// }
-// .rows:nth-child(4):before{
-// 	content: "4";
-// }
-// .rows:nth-child(5):before{
-// 	content: "5";
-// }
-// .rows:nth-child(6):before{
-// 	content: "6";
-// }
-// .rows:nth-child(7):before{
-// 	content: "7";
-// }
-// .rows:nth-child(8):before{
-// 	content: "8";
-// }
-// .rows:nth-child(9):before{
-// 	content: "9";
-// }
+input:hover{
+	border: 1px solid black;
+}
+input:focus{
+	border: 1px solid blue;
+}
 label.invisibl{
 	display: none;
 }
@@ -119,29 +129,96 @@ div.invisibl{
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-around;
-	background: rgba(0, 0, 0, 0.5);
+}
+.get_started{
+	width: 250px;
+	height: 70px;
+	background: transparent;
+	border: 3px solid #fff;
+	border-radius: 10px;
+	opacity: 1;
+	@extend .header_under-title;
+	font-size: 1.5em;
+	box-sizing: border-box;
+	transition: all 0.3s ease;
+}
+.get_started:hover{
+	background: #f4df3a;
+	color: red;
+	border: 3px solid #f4df3a;
+	box-shadow: 0 0 20px #f4df3a;
+  	cursor: pointer;
 }
 button{
-	display: inline-block;
 	width: 80%;
-	box-sizing: border-box;
-	border: 0px;
-	border-radius: 10px;
-	height: 50px;
-	opacity: 0.6;
-	background: #3367d6;
-	transition: all .5s ease;
+	background: transparent;
+	border: 3px solid #fff;
+	border-radius: 8px;
+	height: auto;
+	font-size: 1.2em;
+	font-family: Arial;
+	color: #fff;
+	padding: 7px 5px;
+	transition: all 0.3s ease;
 }
 button:hover{
-	opacity: 1;
+	@extend .get_started:hover;
 }
 // #draw_area{
 // 	width: 100%;
 // 	height: 500px;
 // }
 .display_circiut_container{
-	width: 100%;
+	width: 98%;
 	height: 700px;
 	overflow: scroll;
 	border: 2px solid black;
+	margin: 25px auto 0;
+}
+.display_circiut_container::-webkit-scrollbar{
+	 width:12px;
+}
+.display_circiut_container::-webkit-scrollbar-thumb{
+    border-width:1px 1px 1px 2px;
+    border-color: #777;
+    background-color: #aaa;
+}
+.display_circiut_container::-webkit-scrollbar-thumb:hover{
+    border-width: 1px 1px 1px 2px;
+    border-color: #555;
+    background-color: #777;
+}
+.display_circiut_container::-webkit-scrollbar-track{
+    border-width:0;
+}
+.display_circiut_container::-webkit-scrollbar-track:hover{
+    border-left: solid 1px #aaa;
+    background-color: #eee;
+}
+.draw_area_caption{
+	font: 20px Arial;
+	margin-bottom: 20px;
+}
+.dP_table{
+	margin-bottom: 100px;
+}
+.header_container{
+	width: 100%;
+	height: 700px;
+	background: url('../images/wires2.png') no-repeat;
+	background-size: cover;	
+	box-shadow: 0px 0px 0px 390px rgba(0, 0, 0, .55) inset;
+	color: #fff;
+	padding-top: 200px;
+}
+.header_title{
+	font-family: Helvetica-bold;
+	font-size: 3em;
+	letter-spacing: 2px; 
+}
+.header_under-title{
+	font-family: Helvetica-bold;
+	font-size: 2em;
+	letter-spacing: 1px;
+	margin: 20px 0;
 }
