--- a/css/screen.css
+++ b/css/screen.css
@@ -67,9 +67,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 8, ../sass/screen.scss */
+@font-face {
+  font-family: Helvetica-bold;
+  src: url("../fonts/Helvetica/HelveticaNeueCyr-Bold.otf");
+}
+/* line 13, ../sass/screen.scss */
 .pageLayer {
-  width: 1300px;
+  width: 100%;
   height: 600px;
   margin: 0 auto;
   background: transparent;
@@ -77,78 +81,125 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   top: 0px;
   text-align: center;
   color: black;
-  font-family: Arial, sans-serif;
+  font-family: Arial, Helvetica-bold, sans-serif;
 }
 
-/* line 21, ../sass/screen.scss */
+/* line 26, ../sass/screen.scss */
 .mainSection {
   width: 100%;
-  height: 600px;
+  height: 500px;
   background: transparent;
   position: relative;
 }
 
-/* line 27, ../sass/screen.scss */
+/* line 32, ../sass/screen.scss */
 .leftColumn {
-  width: 1000px;
-  background: blue;
-  height: 600px;
+  width: 75%;
+  background: rgba(244, 223, 58, 0.8);
+  height: 500px;
   padding-bottom: 100px;
   overflow-y: scroll;
   box-sizing: border-box;
+  padding: 50px 5px 0;
+}
+/* line 40, ../sass/screen.scss */
+.leftColumn strong {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  display: inline-block;
 }
 
-/* line 35, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
+.leftColumn::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* line 49, ../sass/screen.scss */
+.leftColumn::-webkit-scrollbar-thumb {
+  border-width: 1px 1px 1px 2px;
+  border-color: #777;
+  background-color: #aaa;
+}
+
+/* line 54, ../sass/screen.scss */
+.leftColumn::-webkit-scrollbar-thumb:hover {
+  border-width: 1px 1px 1px 2px;
+  border-color: #555;
+  background-color: #777;
+}
+
+/* line 59, ../sass/screen.scss */
+.leftColumn::-webkit-scrollbar-track {
+  border-width: 0;
+}
+
+/* line 62, ../sass/screen.scss */
+.leftColumn::-webkit-scrollbar-track:hover {
+  border-left: solid 1px #aaa;
+  background-color: #eee;
+}
+
+/* line 66, ../sass/screen.scss */
 .rightColumn {
-  width: 300px;
-  background: green;
-  height: 600px;
+  width: 25%;
+  background: rgba(19, 159, 240, 0.8);
+  height: 500px;
   position: absolute;
   top: 0px;
   right: 0px;
 }
 
-/* line 43, ../sass/screen.scss */
+/* line 74, ../sass/screen.scss */
 .rows {
   margin: 10px auto;
 }
 
-/* line 46, ../sass/screen.scss */
+/* line 77, ../sass/screen.scss */
 .rows > div {
   width: 20%;
   height: auto;
   display: inline-block;
 }
 
-/* line 51, ../sass/screen.scss */
+/* line 82, ../sass/screen.scss */
 input {
   text-align: center;
-  border-radius: 7px;
-  border: 0px;
+  border-radius: 5px;
+  border: 1px solid transparent;
   padding: 3px 0;
 }
 
-/* line 84, ../sass/screen.scss */
+/* line 88, ../sass/screen.scss */
+input:hover {
+  border: 1px solid black;
+}
+
+/* line 91, ../sass/screen.scss */
+input:focus {
+  border: 1px solid blue;
+}
+
+/* line 94, ../sass/screen.scss */
 label.invisibl {
   display: none;
 }
 
-/* line 87, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 div.invisibl {
   display: none;
 }
 
-/* line 90, ../sass/screen.scss */
+/* line 100, ../sass/screen.scss */
 .rows .selectType {
   display: block;
   width: 100%;
 }
-/* line 93, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 .rows .selectType legend {
   margin: 0 auto;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 .resultSection {
   width: 100%;
   height: auto;
@@ -156,59 +207,144 @@ div.invisibl {
   padding-top: 75px;
 }
 
-/* line 103, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 .result_table td {
   border: 1px solid black;
   text-align: center;
   width: 5%;
 }
 
-/* line 108, ../sass/screen.scss */
+/* line 118, ../sass/screen.scss */
 .result_table {
   width: 100%;
 }
 
-/* line 111, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 .table td {
   text-align: center;
 }
 
-/* line 114, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 .draw_chart {
   display: none;
 }
 
-/* line 117, ../sass/screen.scss */
+/* line 127, ../sass/screen.scss */
 .rightColumn {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  background: rgba(0, 0, 0, 0.5);
 }
 
-/* line 124, ../sass/screen.scss */
-button {
-  display: inline-block;
-  width: 80%;
-  box-sizing: border-box;
-  border: 0px;
+/* line 133, ../sass/screen.scss */
+.get_started {
+  width: 250px;
+  height: 70px;
+  background: transparent;
+  border: 3px solid #fff;
   border-radius: 10px;
-  height: 50px;
-  opacity: 0.6;
-  background: #3367d6;
-  transition: all .5s ease;
-}
-
-/* line 135, ../sass/screen.scss */
-button:hover {
   opacity: 1;
+  font-size: 1.5em;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
 }
 
-/* line 142, ../sass/screen.scss */
+/* line 145, ../sass/screen.scss */
+.get_started:hover, button:hover {
+  background: #f4df3a;
+  color: red;
+  border: 3px solid #f4df3a;
+  box-shadow: 0 0 20px #f4df3a;
+  cursor: pointer;
+}
+
+/* line 152, ../sass/screen.scss */
+button {
+  width: 80%;
+  background: transparent;
+  border: 3px solid #fff;
+  border-radius: 8px;
+  height: auto;
+  font-size: 1.2em;
+  font-family: Arial;
+  color: #fff;
+  padding: 7px 5px;
+  transition: all 0.3s ease;
+}
+
+/* line 171, ../sass/screen.scss */
 .display_circiut_container {
-  width: 100%;
+  width: 98%;
   height: 700px;
   overflow: scroll;
   border: 2px solid black;
+  margin: 25px auto 0;
+}
+
+/* line 178, ../sass/screen.scss */
+.display_circiut_container::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* line 181, ../sass/screen.scss */
+.display_circiut_container::-webkit-scrollbar-thumb {
+  border-width: 1px 1px 1px 2px;
+  border-color: #777;
+  background-color: #aaa;
+}
+
+/* line 186, ../sass/screen.scss */
+.display_circiut_container::-webkit-scrollbar-thumb:hover {
+  border-width: 1px 1px 1px 2px;
+  border-color: #555;
+  background-color: #777;
+}
+
+/* line 191, ../sass/screen.scss */
+.display_circiut_container::-webkit-scrollbar-track {
+  border-width: 0;
+}
+
+/* line 194, ../sass/screen.scss */
+.display_circiut_container::-webkit-scrollbar-track:hover {
+  border-left: solid 1px #aaa;
+  background-color: #eee;
+}
+
+/* line 198, ../sass/screen.scss */
+.draw_area_caption {
+  font: 20px Arial;
+  margin-bottom: 20px;
+}
+
+/* line 202, ../sass/screen.scss */
+.dP_table {
+  margin-bottom: 100px;
+}
+
+/* line 205, ../sass/screen.scss */
+.header_container {
+  width: 100%;
+  height: 700px;
+  background: url("../images/wires2.png") no-repeat;
+  background-size: cover;
+  box-shadow: 0px 0px 0px 390px rgba(0, 0, 0, 0.55) inset;
+  color: #fff;
+  padding-top: 200px;
+}
+
+/* line 214, ../sass/screen.scss */
+.header_title {
+  font-family: Helvetica-bold;
+  font-size: 3em;
+  letter-spacing: 2px;
+}
+
+/* line 219, ../sass/screen.scss */
+.header_under-title, .get_started {
+  font-family: Helvetica-bold;
+  font-size: 2em;
+  letter-spacing: 1px;
+  margin: 20px 0;
 }
